# speech-to-text

./: .gitattributes  .gitignore  README.md  SpeechToText.spec  UV_USAGE.md  gui.py  gui_pyside6.py  nonexistent_transcription.txt  pyproject.toml  requirements.txt  speech_to_text.py  speech_to_text_cli.py  speech_to_text_core.py  speech_to_text_gui.py  test_speech_to_text.py  test_speech_to_text_cli.py  test_speech_to_text_core.py  test_speech_to_text_gui.py
test_data/: french_words_ground_truth.txt  french_words_transcription.txt
