[project]
name = "speech-to-text"
version = "1.0.0"
description = "Speech to Text transcription tool using OpenAI Whisper"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai-whisper",
    "torch",
    "opencc",
    "PySide6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
